tests/ui/feature-gates/feature-gate-allow-internal-unsafe-nested-macro.stderr
error[E0658]: allow_internal_unsafe side-steps the unsafe_code lint
  --> $DIR/feature-gate-allow-internal-unsafe-nested-macro.rs:8:9
   |
LL |         #[allow_internal_unsafe]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | bar!();
   | ------ in this macro invocation
   |
   = help: add `#![feature(allow_internal_unsafe)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: this error originates in the macro `bar` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
